[metadata]
name = py_reflection
version = 0.1.0
author = Prasun Bhattacharyya
author_email = bhattacharyyaprasun47@gmail.com
description = Rest API endpoint to automate Microfocus Reflection Desktop Workspace
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prasun1060/py_reflection
project_urls =
    Bug Tracker = https://github.com/prasun1060/py_reflection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src